# tmdb-casting-lookup

./: Makefile  README.md  application.yaml  application.yml  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py  tmdb_cli.py
app/casting/: casting.py
app/movies/: movie.py  movie_api.py
app/search/: search_api.py  search_results.py
app/tv/: tv_show.py  tv_show_api.py
notebooks/: tmdb-movie-api.ipynb  tmdb-search-api.ipynb  tmdb-tv-shows-api.ipynb
tmdb/: cli.py
tmdb/casting/: casting.py
tmdb/image/: gcs_api.py  image_api.py
tmdb/movies/: movie.py  movie_api.py
tmdb/search/: search_api.py  search_results.py
tmdb/tv/: tv_show.py  tv_show_api.py
tmdb/utils/: config.py  logger.py
