[tool.poetry]
name = "tmdb-crawler"
version = "1.0.0"
description = "TMDB Service to fetch movie/tv show casting"
authors = ["iobruno <bruno.ariev@gmail.com>"]
packages = [
 { include="tmdb", from="." },
]

[tool.poetry.scripts]
tmdb = "tmdb.cli:run"

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.25.1"
Pillow = "8.1.0"
typer = "0.3.2"

[tool.poetry.dev-dependencies]
jupyterlab = "3.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
