[build-system]
requires = [
 "setuptools == 53.0.0",
 "wheel",
 "apache-beam == 2.27.0",
 "google-cloud-storage == 1.36.0",
 "omegaconf == 2.0.6",
 "requests == 2.25.1",
 "pendulum == 2.1.2",
 "Pillow == 8.1.0",
 "python-slugify == 4.0.1",
 "typer == 0.3.2"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
